upadate sign up

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign up Expense tracker</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-    hvb
+
+    <section class="reg-section">
+        <h1>Expense Tracker</h1>
+
+        <form action="/auth/registerUser" method="POST" enctype="application/x-www-form-urlencoded">
+            <h2>Create a new account</h2>
+
+            <div>
+                <div>
+                    <label for="userName">UserName:</label>
+                    <input type="text" name="username" id="username"  placeholder="JohnDeo" required>
+                    <br>
+                </div>
+
+                <div>
+                    <label for="email">Email:</label>
+                    <input name="email" id="email" type="email"  placeholder="example@gmail.com" required>
+                    <br>
+                </div>
+
+                <div>
+                    <label for="password">Password:</label>
+                    <input type="password" name="password" id="password"  placeholder="password"  required>
+                    <br>
+                </div>
+                <div>
+                    <label for="confirm">Confirm Password:</label>
+                    <input type="password" name="confirm" id="confirm" placeholder="Confirm Password" required>
+                    <br>
+
+                </div>
+            </div>
+            <button type="submit" class="submitBtn">Create Account</button>
+            <a href="http://localhost:3000/auth/login">i already have an account</a>
+
+        </form>
+
+
+    </section>
 </body>
+
 </html>
