--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,13 +16,15 @@
             <li>Why Us</li>
             <li>GitHub</li>
             <li>
-                <button class="btn1"><strong>Login</strong></button>
+                <a href="http://localhost:3000/signUp">
+                    <button class="btn1"><strong>Login</strong></button>
+                </a>
             </li>
         </ul>
     </header>
 
     <main>
-        <div class="text"> 
+        <div class="text">
             <h1>Expense tracking made easy</h1>
             <p>Stay on top your spending with Expense Tracker. An online tracking tool to help you better understand
                 your habits and make measurable change.</p>
