--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,7 +13,7 @@
     <section class="reg-section">
         <h1>Expense Tracker</h1>
 
-        <form action="/auth/registerUser" method="POST" enctype="application/x-www-form-urlencoded">
+        <form action="/registerUser" method="POST" enctype="application/x-www-form-urlencoded">
             <h2>Create a new account</h2>
 
             <div>
@@ -41,8 +41,9 @@
 
                 </div>
             </div>
+
             <button type="submit" class="submitBtn">Create Account</button>
-            <a href="http://localhost:3000/auth/login">i already have an account</a>
+            <a href="http://localhost:3000/">i already have an account</a>
 
         </form>
 
