--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet
+    \" href="/css/style.css">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     <section class="reg-section">
         <h1>Expense Tracker</h1>
 
-        <form action="/loginUser" method="POST" enctype="application/x-www-form-urlencoded">
+        <form action="/reset-password" method="POST" enctype="application/x-www-form-urlencoded">
             <h2>Reset Password </h2>
 
             <div>
@@ -26,17 +27,13 @@
 
                 <div>
                     <label for="password">confirm Password:</label>
-                    <input type="password" name="password" id="password" placeholder="password" required>
+                    <input type="password" name="confirm" id="password" placeholder="confirm password" required>
                     <br>
                 </div>
 
             </div>
 
-            <button type="submit" class="submitBtn">Login</button>
-            <div>
-                <a href="http://localhost:3000/">create a new account</a>
-                <a href="http://localhost:3000/">Forget password</a>
-            </div>
+            <button type="submit" class="submitBtn">Reset </button>
 
         </form>
 
