--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -18,6 +18,7 @@
             <h2>Reset Password </h2>
 
             <div>
+                <input type="hidden" name="token" value="<%= token %>">
 
                 <div>
                     <label for="password">Password:</label>
