--- a/views/forgetPassword.ejs
+++ b/views/forgetPassword.ejs
@@ -4,33 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forget password tracker</title>
+    <title>Forget password</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
 
     <section class="reg-section">
-        <h1>Expense Tracker</h1>
+        <h1>DexTrack</h1>
 
-        <form action="/forget-password" method="POST" enctype="application/x-www-form-urlencoded">
-            <h2>Enter Email account</h2>
+        <section class="formSection">
+            <form action="/forget-password" method="POST" enctype="application/x-www-form-urlencoded">
+                <h2>Forgot Password</h2>
 
-            <div>
-                <div>
-                    <input type="email" name="email" id="email" placeholder="JohnDeo@gmail.com" required>
-                    <br>
-                </div>
+                <% if (errors) { %>
+                    <small class="message">
+                        <%= errors.email%>
+                    </small>
+                    <% } %>
 
-            </div>
+                        <div>
+                            <div>
+                                <input type="email" name="email" id="email" placeholder="JohnDeo@gmail.com" required>
+                                <br>
+                            </div>
 
-            <button type="submit" class="submitBtn">Send OTP</button>
-            <div>
-                <a href="http://localhost:3000/">Go back to login</a>
-            </div>
+                        </div>
 
-        </form>
+                        <button type="submit" class="submitBtn">Send OTP</button>
+                        <div>
+                            <a href="http://localhost:3000/">Go back to login</a>
+                        </div>
 
+            </form>
+
+        </section>
 
     </section>
 </body>
