--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -12,13 +12,13 @@
 <body>
 
     <section class="reg-section">
-        <h1>Expense Tracker</h1>
+        <h1>DexTrack</h1>
 
         <form action="/reset-password" method="POST" enctype="application/x-www-form-urlencoded">
             <h2>Reset Password </h2>
 
             <div>
-                <input type="hidden" name="token" value="<%= token %>">
+                <input type="hidden" name="code" value="<%= code %>">
 
                 <div>
                     <label for="password">Password:</label>
