--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,8 +29,9 @@ header {
 }
 
 .btn1,
-.btn2 {
-    background-color: blue;
+.btn2,
+.btn3 {
+    background-color: green;
     color: white;
     height: 2rem;
     width: 6rem;
@@ -64,18 +65,20 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
 }
 
-form {
-    width: 45rem;
+
+.formSection {
+    width: 30rem;
     background-color: white;
     display: flex;
     align-items: center;
     flex-direction: column;
     margin-bottom: 3rem;
     padding: 2rem;
-    box-shadow: 10px 10px 5px -3px rgba(156, 154, 154, 0.75);   
+    box-shadow: 10px 10px 5px -3px rgba(156, 154, 154, 0.75);
+    border-radius: 1rem;
+    justify-content: center;
 }
 
 .signupImg {
@@ -98,11 +101,8 @@ label {
 }
 
 input {
-    width: 100%;
+    width: 20rem;
     margin-top: 1rem;
-    border-top: 0;
-    border-left: 0;
-    border-right: 0;
     height: 2rem;
     font-size: 1rem;
 }
@@ -112,10 +112,10 @@ form>div>div {
 }
 
 .submitBtn {
-    background-color: green;
+    background-color: blue;
     color: white;
     height: 3rem;
-    width: 12rem;
+    width: 20rem;
     border-radius: 8px;
     border: none;
     cursor: pointer;
@@ -126,4 +126,31 @@ form>div>div {
 form a {
     font-size: 1.2rem;
     text-decoration: none;
+}
+
+.btn3 {
+    width: 10rem;
+    padding: 8px;
+}
+
+.link {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+small {
+    color: red;
+    font-size: 1rem;
+}
+
+.message {
+    color: black;
+    display: flex;
+    border: 1px solid red;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(248, 225, 225);
 }
