--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Expense Tracker App</title>
+    <title>DexTrack</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <header>
-        <h2>Expense Tracker</h2>
+        <h2>DexTrack</h2>
         <ul>
             <li>Overview</li>
             <li>Why Us</li>
             <li>GitHub</li>
             <li>
-                <a href="http://localhost:3000/signUp">
+                <a href="http://localhost:3000/login">
                     <button class="btn1"><strong>Login</strong></button>
                 </a>
             </li>
@@ -26,7 +26,7 @@
     <main>
         <div class="text">
             <h1>Expense tracking made easy</h1>
-            <p>Stay on top your spending with Expense Tracker. An online tracking tool to help you better understand
+            <p>Stay on top your spending with DexTrack. An online tracking tool to help you better understand
                 your habits and make measurable change.</p>
             <button class="btn2"><strong>Get Started</strong></button>
         </div>
