--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,24 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DexTrack</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <h2>DexTrack</h2>
-        <ul>
-            <li>Overview</li>
-            <li>Why Us</li>
-            <li>GitHub</li>
-            <li>
-                <a href="http://localhost:3000/login">
-                    <button class="btn1"><strong>Login</strong></button>
-                </a>
-            </li>
-        </ul>
-    </header>
+        <header>
+            <h2>DexTrack</h2>
+            <ul>
+                <li>Overview</li>
+                <li>Why Us</li>
+                <li>GitHub</li>
+                <li>
+                    <a href="http://localhost:3000/login">
+                        <button class="btn1"><strong>Login</strong></button>
+                    </a>
 
-    <main>
+                    <a href="http://localhost:3000/Signup">
+                        <button class="btn4"><strong>Signup</strong></button>
+                    </a>
+                </li>
+            </ul>
+        </header>
+
+    <main class="homeMain">
         <div class="text">
             <h1>Expense tracking made easy</h1>
             <p>Stay on top your spending with DexTrack. An online tracking tool to help you better understand
