--- a/views/confirmOTP.ejs
+++ b/views/confirmOTP.ejs
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirm OTP</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -13,26 +18,34 @@
     <section class="reg-section">
         <h1>DexTrack</h1>
 
-        <form action="/verify-code" method="POST" enctype="application/x-www-form-urlencoded">
-            <h2>Verify OTP</h2>
+        <section class="formSection">
 
-            <div>
-                <input type="hidden" name="userId" value="<%= userId %>"> 
+            <form action="/verify-code" method="POST" enctype="application/x-www-form-urlencoded">
+                <h2>Verify OTP</h2>
 
-                <div>
-                    <input type="num" name="code" id="num" placeholder="00000" required>
-                    <br>
-                </div>
+                <p>Please check your emails for a message with your code. <br> Your code is 6 numbers long.</p>
+                <% if (error) { %>
+                    <small class="message">
+                        <%= error%>
+                    </small>
+                    <% } %>
 
-            </div>
+                        <div>
+                            <input type="hidden" name="userId" value="<%= userId %>">
 
-            <button type="submit" class="submitBtn">Verify OTP</button>
-            <div>
-                <a href="http://localhost:3000/">Resend OTP</a>
-            </div>
+                            <div>
+                                <input type="num" name="code" id="num" placeholder="00000" required>
+                                <br>
+                            </div>
 
-        </form>
+                        </div>
 
+                        <button type="submit" class="submitBtn">Verify OTP</button>
+                        <div>
+                            <a href="http://localhost:3000/forgetPassword">Resend OTP</a>
+                        </div>
+            </form>
+        </section>
 
     </section>
 </body>
