--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,11 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DexTrack Dashboard</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    this is the Dashboard
+    <header>
+        <h2>DexTrack</h2>
+        <ul>
+            <li>profile</li>
+            <li>
+                <a href="http://localhost:3000/login">
+                    <button class="btn1"><strong>Logout</strong></button>
+                </a>
+
+            </li>
+        </ul>
+    </header>
+
+    <main class="dashboardMain">
+        <div class="dashboardSection1">
+            <h1>WELCOME BACK <span class="username">#</span> </h1>
+            <h1>you have 0 expenses totaling &#8358 0</h1>
+            <a href="http://localhost:3000/">
+                <button class="btn2"><strong>Add Expenses</strong></button>
+            </a>
+        </div>
+    </main>
 </body>
+
 </html>
