--- a/views/forgetPassword.ejs
+++ b/views/forgetPassword.ejs
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forget password</title>
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -17,11 +22,11 @@
             <form action="/forget-password" method="POST" enctype="application/x-www-form-urlencoded">
                 <h2>Forgot Password</h2>
 
-                <% if (errors) { %>
-                    <small class="message">
-                        <%= errors.email%>
-                    </small>
-                    <% } %>
+                    <% if (errors) { %>
+                        <small class="message">
+                            <%= errors.email%>
+                        </small>
+                        <% } %>
 
                         <div>
                             <div>
