--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -7,6 +7,11 @@
     <title>Reset Password</title>
     <link rel="stylesheet
     \" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -14,31 +19,51 @@
     <section class="reg-section">
         <h1>DexTrack</h1>
 
-        <form action="/reset-password" method="POST" enctype="application/x-www-form-urlencoded">
-            <h2>Reset Password </h2>
+        <section class="formSection">
 
-            <div>
-                <input type="hidden" name="code" value="<%= code %>">
+            <form action="/reset-password" method="POST" enctype="application/x-www-form-urlencoded">
+                <h2>Reset Password </h2>
 
-                <div>
-                    <label for="password">Password:</label>
-                    <input type="password" name="password" id="password" placeholder="password" required>
-                    <br>
-                </div>
+                        <div>
+                            <input type="hidden" name="code" value="<%= code %>">
 
-                <div>
-                    <label for="password">confirm Password:</label>
-                    <input type="password" name="confirm" id="password" placeholder="confirm password" required>
-                    <br>
-                </div>
+                            <% if (errors.code) { %>
+                                <small>
+                                    <%= errors.code[0] %>
+                                </small>
+                                <% } %>
 
-            </div>
+                            <div>
+                                <input type="password" name="password" id="password" placeholder="password" required>
+                                <br>
+                                <% if (errors.password) { %>
+                                    <small>
+                                        <%= errors.password[0] %>
+                                    </small>
+                                    <% } %>
+                            </div>
 
-            <button type="submit" class="submitBtn">Reset </button>
+                            <div>
+                                <input type="password" name="confirm" id="password" placeholder="confirm password"
+                                    required>
+                                <br>
+                                <% if (errors.confirm) { %>
+                                    <small>
+                                        <%= errors.confirm[0] %>
+                                    </small>
+                                    <% } %>
+                            </div>
 
-        </form>
+                        </div>
 
+                        <button type="submit" class="submitBtn">Reset </button>
 
+                        <div>
+                            <a href="http://localhost:3000/">Go back to login</a>
+                        </div>
+
+            </form>
+        </section>
     </section>
 </body>
 
