--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,8 @@ label {
     font-size: 1.5rem;
 }
 
-input {
+input,
+select {
     width: 20rem;
     margin-top: 1rem;
     height: 2rem;
@@ -142,7 +143,7 @@ form a {
 
 .link {
     display: flex;
-    flex-directidashboardH1on: column;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 0.5rem;
@@ -167,12 +168,21 @@ small {
     color: white;
 }
 
-.username{
+.username {
     color: brown;
 }
 
-.dashboardSection1{
+.dashboardSection1 {
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+
+.dashbordul {
+    width: 5rem;
+    justify-content: space-between;
+}
+
+i {
+    color: green;
 }
