--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,27 +11,32 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
 <body>
     <header>
         <h2>DexTrack</h2>
-        <ul>
-            <li>profile</li>
+        <ul class="dashbordul">
             <li>
-                <a href="http://localhost:3000/login">
-                    <button class="btn1"><strong>Logout</strong></button>
+                <a href="/logout" class="logout-link">
+                    <i class="fa-regular fa-user"></i>
                 </a>
-
+            </li>
+            <li>
+                <a href="/logout" class="logout-link">
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                </a>
             </li>
         </ul>
     </header>
 
     <main class="dashboardMain">
         <div class="dashboardSection1">
-            <h1>WELCOME BACK <span class="username">#</span> </h1>
+            <h1>WELCOME BACK <span class="username"><%= username %></span> </h1>
             <h1>you have 0 expenses totaling &#8358 0</h1>
-            <a href="http://localhost:3000/">
+            <a href="http://localhost:3000/addExpense">
                 <button class="btn2"><strong>Add Expenses</strong></button>
             </a>
         </div>
