start to set the budget

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,3 +186,15 @@ small {
 i {
     color: green;
 }
+
+.btnDivDashboard, .btnHomeli{
+     width: 20rem;
+     height: 2.5rem;
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+}
+
+.btnHomeli {
+    width: 13rem;
+}
