--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
                 <li>Overview</li>
                 <li>Why Us</li>
                 <li>GitHub</li>
-                <li>
+                <li class="btnHomeli">
                     <a href="http://localhost:3000/login">
                         <button class="btn1"><strong>Login</strong></button>
                     </a>
