--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,8 +11,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 </head>
 
 <body>
@@ -33,12 +34,13 @@
     </header>
 
     <main class="dashboardMain">
-        <div class="dashboardSection1">
+        <section class="dashboardSection1">
             <h1>WELCOME BACK <span class="username">
                     <%= username %>
                 </span> </h1>
             <h1>you have <%= expenseCount %> expenses totaling &#8358 <%= totalAmount %>
             </h1>
+
             <div class="btnDivDashboard">
                 <a href="http://localhost:3000/addExpense">
                     <button class="btn2"><strong>Add Expenses</strong></button>
@@ -47,8 +49,17 @@
                     <button class="btn2"><strong>Set Budget</strong></button>
                 </a>
             </div>
-        </div>
+
+        </section>
+
+        <section  class="dashboardSection2">
+            <canvas id="lineChart" width="800" height="400"></canvas>
+            <!-- Pass data as a hidden input -->
+            <input type="hidden" id="expensesData" value='<%- JSON.stringify(expenses) %>' />
+        </section>
     </main>
+
+    <script src="/scripts/chart.js"></script>
 </body>
 
 </html>
