--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
 <body>
         <header>
             <h2>DexTrack</h2>
-            <ul>
+            <ul class="home-nav">
                 <li>Overview</li>
                 <li>Why Us</li>
                 <li>GitHub</li>
