--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -13,11 +13,17 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <h2>DexTrack</h2>
         <ul class="dashbordul">
             <li>
@@ -31,15 +37,15 @@
                 </a>
             </li>
         </ul>
-    </header>
+    </header> -->
 
-    <main class="dashboardMain">
+    <!-- <main class="dashboardMain">
         <section class="dashboardSection1">
             <h1>WELCOME BACK <span class="username">
                     <%= username %>
                 </span> </h1>
             <h1>you have <%= expenseCount %> expenses totaling &#8358 <%= totalAmount %>
-            </h1>
+            </h1><i class="fa-solid fa-trash"></i>
 
             <div class="btnDivDashboard">
                 <a href="http://localhost:3000/addExpense">
@@ -52,12 +58,72 @@
 
         </section>
 
-        <section  class="dashboardSection2">
-            <canvas id="lineChart" width="800" height="400"></canvas>
-            <!-- Pass data as a hidden input -->
-            <input type="hidden" id="expensesData" value='<%- JSON.stringify(expenses) %>' />
+        <section class="dashboardSection2">
+            <div class="lineChart">
+                <canvas id="lineChart" width="800" height="400"></canvas>
+            </div>
         </section>
+    </main> -->
+    
+    <main>
+        <div class="dashboard">
+            
+            <%- include('partials/aside') %>
+            
+            
+            <!-- Column 2 -->
+                <div class="column">
+                    <div class="dashboard-header">
+                        <h2>All Transactions</h2>
+                        <nav>
+                            <ul class="dashboard-header-list-div">
+                                <li class="dashboard-header-list">Today</li>
+                                <li class="dashboard-header-list">This Month</li>
+                                <li class="dashboard-header-list">Jan 01,2025- Jan 31,2025</li>
+                            </ul>
+                        </nav>
+                    </div>
+
+                    <hr>
+                    
+                    <div class="dashboard-section-1">
+                        <div class="sum-counts">
+                            <h5>Total Expenses</h5>
+                            <h3>
+                                <span>&#8358 <%= totalAmount %></span>
+                                <i class="fa-solid fa-money-bill"> </i>
+                            </h3>
+                        </div>
+
+                        <div class="sum-counts">
+                            <h5>Total Budget</h5>
+                            <h3>
+                                <span>&#8358 <%= totalAmount %></span>
+                                <i class="fa-solid fa-money-bill"> </i>
+                            </h3>
+                        </div>
+
+                        <div class="sum-counts">
+                            <h5>Total Balance</h5>
+                            <h3>
+                                <span>&#8358 <%= totalAmount %></span>
+                                <i class="fa-solid fa-money-bill"> </i>
+                            </h3>
+                        </div>
+                    </div>
+                    
+                    <div class="chart-container">
+                        <div class="chart-item">
+                            <canvas id="lineChart" width="800" height="400"></canvas>
+                        </div>
+                        <div class="chart-item">2</div>
+                        <div class="chart-item">3</div>
+                        <div class="chart-item">4</div>
+                    </div>
+                </div>
+        </div>
     </main>
+    <input type="hidden" id="expensesData" value='<%- JSON.stringify(expenses) %>' />
 
     <script src="/scripts/chart.js"></script>
 </body>
